--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -13,7 +13,7 @@
       }
     ],
     "paths": {
-      "@datadog/browser-core": ["./packages/core/src"]
+      "@cloudsnorkel/datadog-browser-core": ["./packages/core/src"]
     }
   }
 }
