--- a/packages/rum/package.json
+++ b/packages/rum/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@datadog/browser-rum",
+  "name": "@cloudsnorkel/datadog-browser-rum",
   "version": "1.21.0",
   "license": "Apache-2.0",
   "main": "cjs/index.js",
@@ -13,7 +13,7 @@
     "replace-build-env": "node ../../scripts/replace-build-env.js"
   },
   "dependencies": {
-    "@datadog/browser-core": "1.21.0",
+    "@cloudsnorkel/datadog-browser-core": "1.21.0",
     "tslib": "^1.10.0"
   },
   "devDependencies": {
